bitfields/tests/compile_error_cases/errors/array_fields/array_field_float_element_type.rs
use bitfields::bitfield;

#[bitfield(u32)]
pub struct Bitfield {
    a: [f32; 1],
}

fn main() {}

